--- a/style.css
+++ b/style.css
@@ -2,75 +2,122 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
 
 /*Style reset*/
-*
-{
-    padding:0;
-    margin:0;
-    border:0;
-    list-style-type: none;
-    text-decoration: none;
-}
+    *
+    {
+        padding:0;
+        margin:0;
+        border:0;
+        list-style-type: none;
+        text-decoration: none;
+    }
 
 /*front end mentor styles*/
-.attribution 
-{ 
-    font-size: 11px; 
-    text-align: center; 
-}
+    .attribution 
+    { 
+        font-size: 11px; 
+        text-align: center; 
+    }
 
-.attribution a 
-{ 
-    color: hsl(228, 45%, 44%); 
-}
+    .attribution a 
+    { 
+        color: hsl(228, 45%, 44%); 
+    }
 
 /*General Body Styles*/
-body
-{
-    background-color: hsl(217,54%,11%);
-    color: hsl(215, 51%, 70%);
-    font-family: 'Outfit', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
+    body
+    {
+        background-color: hsl(217,54%,11%);
+        color: hsl(215, 51%, 70%);
+        font-family: 'Outfit', sans-serif;
+        font-size: 18px;
+        font-weight: 400;
+    }
+    a
+    {
+        color:hsl(0, 0%, 100%);
+    }
+    img
+    {
+        padding-right:0.25rem;
+        vertical-align: baseline;
+    }
+    p
+    {
+        font-weight: 300;
+        line-height: 1.5;
+        padding-bottom:15px;
+    }
+    hr
+    {
+        width:100%;
+        border-top:1px solid hsl(215, 51%, 70%);
+        padding-bottom: 10px;
 }
-a
-{
-    color:hsl(0, 0%, 100%);
-}
-img
-{
-    padding-right:0.25rem;
-    vertical-align: baseline;
-}
-p
-{
-    font-weight: 300;
-}
-
 /*Class Styles*/
-.card
-{
-    width:325px;
-    background-color:hsl(216, 50%, 16%);
-    padding:25px 20px;
-    border-radius: 25px;
-}
-.card a
-{
-    font-weight:600;
+    .card
+    {
+        width:325px;
+        background-color:hsl(216, 50%, 16%);
+        padding:25px 20px;
+        border-radius: 25px;
+        margin:auto;
+    }
+    .card a
+    {
+        font-weight:600;
+        display:block;
+        padding-bottom:10px;
+    }
+    .card-icon
+    {
+        max-width:100%;
+        height:auto;
+        border-radius: 15px;
+        padding-bottom:10px;
+    }
+    .purchase-information
+    {
+        display:flex;
+        justify-content: space-between;
+        padding-bottom:10px;
+    }
+    .etherium-cost
+    {
+        color: hsl(178, 100%, 50%);
+        
+    }
+    .user-information
+    {
+        width:100%;
+        outline:1px solid green;
+        display:flex;
+        align-items: center;
+        /* padding-bottom:15px; */
+        margin-bottom:15px;
+    }
     
-}
-.card-icon
-{
-    max-width:100%;
-    height:auto;
-    border-radius: 15px;
-}
-.etherium-cost
-{
-    color: hsl(178, 100%, 50%);
-    
-}
-.user-information, .user-information a
-{
-    font-weight: 300;
-}
+    .user-information, .user-information a
+    {
+        font-weight: 300;
+    }
+    .card .user-information a
+    {
+        padding-bottom:0;
+    }
+/*Feedback Effects*/
+    .user-information a, .card a
+    {
+        transition: color 0.5s;
+    }
+
+    .user-information a:hover, .card a:hover
+    {
+        color:hsl(178, 100%, 50%);
+    }
+
+/* To Do List 7.5.22
+    implement hover icon behavior
+    center item vertically on page
+    Add White border to avatar image
+    review spacing on avatar section     
+*/
